# inspect_config_v2

./: .env.example  .gitignore  FIELD_EXTRACTION.md  IMPLEMENTATION_SUMMARY.md  RANGE_FEATURE.md  RANGE_IMPORT_ISSUE_ANALYSIS.md  README.md  README.zh-CN.md  config.local.yaml.example  config.yaml  import_range.py  pyproject.toml
config/: config.yaml
db/: Dockerfile  ddl.sql  docker-compose.yml  init_presets.sql  migration_add_is_updated.sql
docs/: environment.md
src/: __init__.py  config.py  main.py  run.py
src/core/: config_loader.py  logger.py  pipeline.py  step_registry.py
src/database/: __init__.py  connection.py  repository.py
src/ingest/: __init__.py  extractor.py  field_extractor.py  field_parser.py  processor.py  range_importer.py  range_parser.py
src/obs/: __init__.py  client.py  parser.py
src/steps/: build_sql.py  collect.py  download.py  find_range.py  find_range_full.py  generate_db_csv.py  generate_info.py  import_db.py  pack_csv_txt.py  selectors.py  test_range.py  update_rule_api.py  update_rule_obs.py  visualize_db.py
src/utils/: __init__.py  logger.py
src/visualize_db_app/: __init__.py  app.py  callbacks.py  charts.py  database.py  docker-compose.yml  layout.py
