[project]
name = "inspect-config"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "pyyaml>=6.0.3",
    "psycopg2-binary>=2.9.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "plotly>=5.18.0",
    "kaleido>=0.2.1",
    "psycopg2-binary>=2.9.11",
]
