[project]
name = "inspect-config"
version = "2.0.0"
description = "OBS 数据收集系统 - 从华为云 OBS 自动采集数据质量报告"
authors = [
    {name = "Inspect Config Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg2-binary>=2.9.9",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
]

[project.scripts]
inspect-config = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pylint.messages_control]
max-line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
